<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questions_amount">questions_amount</string>
    <string name="quiz">quiz</string>
    <string-array name="All">
        <item>All</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>