<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myquizapp.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.myquizapp.ui.main.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myquizapp.ui.main.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
<!--    <fragment-->
<!--        android:id="@+id/boardFragment"-->
<!--        android:name="com.example.myquizapp.BoardFragment"-->
<!--        android:label="fragment_board"-->
<!--        tools:layout="@layout/activity_splash" >-->
<!--        <action-->
<!--            android:id="@+id/action_boardFragment_to_navigation_home"-->
<!--            app:destination="@id/navigation_home" />-->
<!--    </fragment>-->
</navigation>