<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/quiz_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/quiz"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/main_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quiz_title"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/questions_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginTop="40dp"
            android:text="@string/questions_amount"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_main" />

        <TextView
            android:id="@+id/questions_amount_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@+id/questions_amount_text"
            app:layout_constraintTop_toBottomOf="@id/iv_main"
            tools:text="10" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/questions_amount_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="55dp"
            android:layout_marginStart="67dp"
            android:layout_marginTop="17dp"
            android:max="50"
            android:min="0"
            android:progress="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questions_amount_text"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/category_text"
            style="@style/tv_set_type"
            android:text="category"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questions_amount_seek_bar" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/category_spinner"
            style="@style/input_order"
            android:autofillHints="@string/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_text" />

        <TextView
            android:id="@+id/difficulty_text"
            style="@style/tv_set_type"
            android:text="difficulty"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_spinner" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/difficulty_spinner"
            style="@style/input_order"
            android:entries="@array/All"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficulty_text" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/teal_200"
            android:text="start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficulty_spinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>